app/src/main/java/com/example/eltory/rejectcall/MakeRequestCode.java
package com.example.eltory.rejectcall;

/**
 * Created by eltor on 2017-06-13.
 */
public class MakeRequestCode {
    // TODO : 리퀘스트 코드 제작해서 반환
}
